<resources>
    <string name="app_name">Foodapp</string>
    <string name="label_name">Name</string>
    <string name="label_address">Address</string>
    <string name="label_type">Type</string>
    <string name="label_take_out">Take Out</string>
    <string name="label_sit_down"> Sit Down</string>
    <string name="label_delivery">Delivery</string>
    <string name="label_save">Save</string>
</resources>
